force-app/main/default/objects/Appeal_Party__c/Appeal_Party__c.object-meta.xml
<CustomObject>
    <description>WCA - Parties invloved in a citation claim</description>
    <label>Citation Appeal Party</label>
    <nameField>
        <label>Appeal Parties Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citation Appeal Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>