force-app/main/default/objects/Appeal_Party__c/fields/Account_being_Represented__c.field-meta.xml
<CustomField>
    <fullName>Account_being_Represented__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account being Represented</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Citation Appeal Parties (Account being Represented)</relationshipLabel>
    <relationshipName>Citation_Appeal_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>