force-app/main/default/objects/Appeal_Party__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Citation Appeal Parties</relationshipLabel>
    <relationshipName>Appeal_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>