force-app/main/default/objects/Appeal_Party__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appellant</fullName>
            </value>
            <value>
                <fullName>Appellant Attorney</fullName>
            </value>
            <value>
                <fullName>Appellant Representative</fullName>
            </value>
            <value>
                <fullName>Agent for Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>